--- a/week1/index.html
+++ b/week1/index.html
@@ -41,6 +41,7 @@
           <ul>
             <li>Why did the exercise use 'getElementByID' and not 'querySelector'?</li>
             <li>What are the most common reasons to use localStorage() in the real world?</li>
+            <li>In the assignment it says to "record your findings" but, I'm a little unsure what I'm supposed to record.... "Yes, I did see my story saved to local storage, and now I can recall it and edit it"?</li>
           </ul>
         </aside>
         <section>
