--- a/week1/index.html
+++ b/week1/index.html
@@ -27,11 +27,8 @@
       <main class="contentbox">
         <aside>
           <h2>Activity/Excercise:</h2>
-         <ul>
-           <li>
              <a href="story_editor.html">Story Editor</a>
-           </li>
-         </ul> 
+          
           <h2>Keywords:</h2>
           <ul>
             <li><span class="vocab">setItem-</span> send/save/log item to local storage</li>
@@ -57,9 +54,16 @@
 
           </li>
         <li>
-       
+          Speed Matters--
+       1.8% of Users on 4g, opposed to 25% of users on 3g (2013 stat)! ·Reduce image size, use SVG/webfont to lower bandwidth. ·Optimize and minify files. ·Gzip foles to eliminate unnecessary data. 
 
-        </li></ul>
+        </li>
+      <li>reachability, make it easy for users to get to the controls. Move central nav to the bottom inside thumb-zone for single handed users. </li>
+    <li>Reachability-> created a perception of speed/faster. Which caused further user satisfaction</li>
+  <li>Hamburger: Menu with border had the highest conversion rates. Menu alone got 22% LESS clicks, it wasn't clear that the nav did anything. Menu alone  with border got 20% MORE clicks.  </li>
+<li>Mobile Forms-> Make it simple, so user can USE it, easily. Reduce Cognitive Load. Use FLoat label, so user doesn't forget what they're filling out! Only ask for information that user needs. If a longer form is needed, paginate the form. Enable auto-complete on form, increases conversion rates. Passwords: masking isn't completely necessary. Credit Card, auto-advance!!! I love that!!! Give user the best keyboard for input that is being asked for... phonenumber-- pull up the number pad. Phone numbers- don't list numbers as text only, link them as a phone number, for tap-to-dial.  </li>
+<li>Advertising-> mobile ads NEED to be re-tooled for mobile devices. Pop-ups, etc. Ugh, I hate all of those mobile ads. If you need to have an ad, make it less than 40% of your realestate. could do video ads=> have higher convesion rates. A cut-out ad that is a window behind what the uiser is doing. STOP USING POP-UPS!!! Give them content, and use advertising sparingly. Content FIRST. </li>
+</ul>
           </p>
         </section>
       </main>
