--- a/week1/story_editor.html
+++ b/week1/story_editor.html
@@ -22,7 +22,7 @@
         <h1>Week 1</h1>
 
         <section>
-          <h3><a href="/index.html">WDD 330 Menu</a></h3>
+          <h3><a href="../index.html">WDD 330 Menu</a></h3>
           <p>Local Storage Activity</p>
           <p>Sept. 14, 2021</p>
         </section>
