--- a/week1/index.html
+++ b/week1/index.html
@@ -18,7 +18,7 @@
         <h1>Week 1</h1>
         <h2>Frontend WDD 330</h2>
         <section>
-          <h3><a href="/index.html">Menu</a></h3>
+          <h3><a href="../index.html">Menu</a></h3>
           <p>
             Reading: Doing Stuff with Web Things <br />
             Video: Mobile UX
