--- a/week1/index.html
+++ b/week1/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <script src="js/script.js" defer></script>
+    <link rel="shortcut icon" href="../favicon.ico" />
     <title>Ashley Zufelt Frontend WDD330</title>
   </head>
   <body>
