--- a/week1/story_editor.html
+++ b/week1/story_editor.html
@@ -9,7 +9,7 @@
     <!-- <link type="text/css" rel="stylesheet" href="/wdd330-journal/main.css" /> -->
     <link type="text/css" rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="../favicon.ico" />
 
     <script src="js/script.js" defer></script>
     <script src="js/story_editor.js" defer></script>
