--- a/week2/index.html
+++ b/week2/index.html
@@ -38,7 +38,7 @@
             <li>
               <a href="calculator.html">Calculator</a>
             </li>
-            <li><a href="test.html">SingSong</a></li>
+            <li><a href="test.html">Sing( )</a></li>
             <li>
               <a href="https://codepen.io/azufelt/pen/rNwdbVv" target="_blank"
                 >Rainbow CodePen</a
