calculator font & partial week3 notes

--- a/week2/calculator.html
+++ b/week2/calculator.html
@@ -8,6 +8,7 @@
       content="Team Activity Week 2 - Brigham Young University-Idaho"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <script defer src="js/calculator.js"></script>
 
     <title>Team Project - Week 2</title>
@@ -90,5 +91,17 @@
         callback. Which eventually led to a working calculator, with DRY code.
       </p>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: [
+            "Permanent Marker",
+            "Shadows Into Light Two",
+            "Montserrat",
+          ],
+        },
+      });
+    </script>
   </body>
 </html>
