--- a/week3/index.html
+++ b/week3/index.html
@@ -38,7 +38,7 @@
           <h2>Activity/Excercise:</h2>
           <ul class="activitylinks">
             <li>
-              <a href="week3/activity.html">Team Activity</a>
+              <a href="activity.html">Team Activity</a>
             </li>
           </ul>
 
