--- a/week3/activity.html
+++ b/week3/activity.html
@@ -9,7 +9,22 @@
     <title>Week 3 | Team Activity</title>
   </head>
   <body>
-    <h1>🦖 Team Activity Code.</h1>
+    <header>
+      <h1>Week 3 🦖 Team Activity Code.</h1>
+      <h2>Frontend WDD 330</h2>
+      <section>
+        <h3><a href="../index.html">Menu</a></h3>
+        <p>
+          <a
+            href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/5"
+            target="_blank"
+            >JavaScript: Novice to Ninja, Ch. 5-7</a
+          >
+        </p>
+
+        <p><a href="index.html"> Back to Journal</a></p>
+      </section>
+    </header>
     <section>
       <h2>## Array Cardio Day 1</h2>
       <p>Get your shorts on - this is an array workout!</p>
