week 4, partial update

--- a/week3/index.html
+++ b/week3/index.html
@@ -122,7 +122,7 @@ user.sayHi();
               method.
             </li>
             <li><span class="vocab">Arrow functions =></span>
-              Arrow functions don't have their own <em>this. If <em>this is used in an => function, then it is owned by the outer function "normal" function. Example: 
+              Arrow functions don't have their own <em>this.</em> If <em>this</em>is used in an => function, then it is owned by the outer "normal" function. Example: 
                 <pre>
 let user = {
   firstName: "Ashley",
