--- a/week4/activitywithellie.html
+++ b/week4/activitywithellie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="js/activity.js" defer></script>
+    <script src="js/activitywithellie.js" defer></script>
     <link type="text/css" rel="stylesheet" href="css/activity.css" />
     <link type="text/css" rel="stylesheet" href="css/main.css" />
     <title>Week 4 | Team Activity</title>
@@ -34,9 +34,6 @@
         <h1 class="gameStatus"></h1>
         <button class="restart">New Game!</button>
       </div>
-    </section>
-    <section>
-      <a href="teamactivity.html">The original Team code</a>
     </section>
     </main>
   </body>
