--- a/week4/index.html
+++ b/week4/index.html
@@ -1,88 +1,309 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Ashley Zufelt" />
-    <link type="normalize/css" rel="stylesheet" href="#" />
-    <link type="text/css" rel="stylesheet" href="css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <script src="js/script.js" defer></script>
 
-    <link rel="shortcut icon" href="../favicon.ico" />
-    <title>Ashley Zufelt Frontend WDD330</title>
-  </head>
-  <body>
-    <div class="notepad"></div>
-    <div class="gridbox">
-      <header>
-        <h1>Week 4</h1>
-        <h2>Frontend WDD 330</h2>
-        <section>
-          <h3><a href="../index.html">Menu</a></h3>
-          <p>
-            <a
-              href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/8"
-              target="_blank"
-              >JS: Ninja Ch.8, 12, 15</a
-            >
-          </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Ashley Zufelt" />
+  <link type="normalize/css" rel="stylesheet" href="#" />
+  <link type="text/css" rel="stylesheet" href="css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <script src="js/script.js" defer></script>
 
-          <p>Oct. 5, 2021</p>
-        </section>
-      </header>
-      <main class="contentbox">
-        <aside>
-          <h2>Activity/Excercise:</h2>
-          <ul class="activitylinks">
-            <li>
-              <a href="activity.html">Team Activity</a>
-            </li>
-          </ul>
+  <link rel="shortcut icon" href="../favicon.ico" />
+  <title>Ashley Zufelt Frontend WDD330</title>
+</head>
 
-          <h2>Keywords:</h2>
-          <ul>
-            <li>
-              <span class="vocab"></span>
-            </li>
-            <li>
-              <span class="vocab"></span>
-            </li>
-          </ul>
-          <h2>Questions:</h2>
-          <ul>
-            <li></li>
-            <li></li>
-          </ul>
-        </aside>
-        <section class="notes">
-          <h2>Notes:</h2>
-
-          <ul>
-            <li>
-              <span class="vocab"></span>
-            </li>
-          </ul>
-        </section>
-      </main>
+<body>
+  <div class="notepad"></div>
+  <div class="gridbox">
+    <header>
+      <h1>Week 4</h1>
+      <h2>Frontend WDD 330</h2>
       <section>
-        <h2>Summary</h2>
-      </section>
-    </div>
-    <footer>&copy;<span id="currentyear"></span> | Ashley Zufelt</footer>
+        <h3><a href="../index.html">Menu</a></h3>
+        <p>
+          <a href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/8"
+            target="_blank">JS: Ninja Ch.8, 12, 15</a>
+        </p>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>
-      WebFont.load({
-        google: {
-          families: [
-            "Permanent Marker",
-            "Shadows Into Light Two",
-            "Montserrat",
-          ],
-        },
-      });
-    </script>
-  </body>
+        <p>Oct. 5, 2021</p>
+      </section>
+    </header>
+    <main class="contentbox">
+      <aside>
+        <h2>Activity/Excercise:</h2>
+        <ul class="activitylinks">
+          <li>
+            <a href="tictactoe.html"> Tic-Tac-Toe</a>
+          </li>
+          <li>
+          <li>
+            <a href="activitywithellie.html">Attempt #2 w/ Ellie</a>
+          </li>
+          <li>
+            <a href="activity.html">Team Activity</a>
+          </li>
+
+
+          <a href="secretlifeofobjects.html">Code SandBox</a>
+          </li>
+        </ul>
+
+        <h2>Keywords:</h2>
+        <ul>
+          <li>
+            <span class="vocab">=action</span> URL that the form gets submitted to, for processing on the server isde.
+          </li>
+          <li>
+            <span class="vocab">OOP 🤯</span>
+          </li>
+          <li>
+            <span class="vocab">Constructor—</span>
+          </li>
+        </ul>
+        <h2>Questions:</h2>
+        <ul>
+          <li>Is there a "best way": wrapping a
+            <pre><label> < label ></label></pre> around an
+            <pre><input value="< input >"></pre> or linking via attribute?
+          </li>
+          <li>Which is better to be using?
+            <pre>< button></pre> or
+            <pre>< input type="button"></pre>?</li>
+          <li>What is the difference between Forms and Input Types? —A form is used to collect user input... It is
+            essentially the "wrapper" that goes around input elements so all of them can be submitted and logged to the
+            server/database. </li>
+        </ul>
+      </aside>
+      <section class="notes">
+        <h2>Notes:</h2>
+
+        <ul>
+          <li>
+            <span class="vocab">Accessible—</span> I think it's a REALLY BIG DEAL to make sure that the things that we
+            develop are accessible to all users, regardless of limitations. Knowing how that impacts the perceived
+            function of an application, I intend to remain committed to following WAVE best practices. Here is a book <a
+              href="https://www.sitepoint.com/premium/books/designing-ux-forms"> Designing UX: FORMS</a> that covers
+            additional accesibility enhancements.
+          </li>
+          <li>
+            <span class="vocab">
+              <h1>Forms—</h1>
+            </span>
+            <pre>
+“< form name='search' action='/search'>
+  < input name='searchInput'>
+  < button type='submit'>Search</ button>
+</ form>”
+            </pre>
+            <ul>
+              <li><span class="vocab">ofsearch-</span> contains input field & button to instigate search.
+              </li>
+              <li><span class="vocab">DOM Access—</span> Access various pieces of the form by using the following:
+                <ol>
+                  <li>const form = document.forms.search;— use the name attribute to identify a form. <- take caution in
+                      using this method, as it could target multiple items incorrectly. Prefer method: const
+                      form=document.forms['search'];</li> <li>const [input, button] = form.elements;— returns HTML
+                      collection of forms. </li>
+                  <li>const input = form.searchInput;— access forms using their attribute name. </li>
+                  <li>const input = form['searchInput'] —For if there are any name clashes with other property and
+                    method names.</li>
+                </ol>
+              </li>
+              <li><span class="vocab">Submitting Forms—</span> Use a submit Listener to send form submition to the
+                server to be processed, using JavaScript to intercept the form.
+                <pre>
+“const form = document.forms['search'];
+form.addEventListener ('submit', search, false);
+
+function search() {
+alert(' Form Submitted');
+}”
+The desired URL should end in something like : '.../search?searchInput=hello'--> Which is what I'm about to learn in PHP 🙌.
+              </pre>
+              </li>
+              <li>Other Form Controls:
+                <ul class="formControls">
+                  <li>
+                    input<label for="fname">Input</label><br>
+                    <input type="text" id="fname" value="Input">
+                  </li>
+                  <li>
+                    select<select></select>
+                  </li>
+                  <li>
+                    textarea <label for='origin'>Origin Story:
+                      <textarea id='origin' name='origin' rows='2' cols='2'></textarea>
+                  </li>
+                  <li>
+                    button <input type="button" onclick="alert('This is a Button!')" value="Button">
+                  </li>
+                  <li>
+                    radio <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                    <label for="javascript">JavaScript</label>
+                  </li>
+                  <li>
+                    checkbox<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                    <label for="vehicle1"> I like 🦖</label><br>
+                  </li>
+                  <li>
+                    submit<input type="submit" value="Submit">
+                  </li>
+                  <li>
+                    password<label for="pwd">Password</label><br>
+                    <input type="password" id="pwd" name="pwd">
+                  </li>
+                  <li>
+                    color<label for="favcolor">Select your favorite color:</label>
+                    <input type="color" id="favcolor" name="favcolor">
+                  </li>
+                  <li>
+                    Date <label for="birthday">Date</label>
+                    <input type="date" id="birthday" name="birthday">
+                  </li>
+                  <li>
+                    email <label for="email">Enter your email:</label>
+                    <input type="email" id="email" name="email">
+                  </li>
+                  <li>
+                    file<label for="myfile">File</label>
+                    <input type="file" id="myfile" name="myfile">
+                  </li>
+                  <li> number <label for="quantity">Quantity (between 1 and 5):</label>
+                    <input type="number" id="quantity" name="quantity" min="1" max="5"></li>
+                  <li> range <label for="vol">Volume (between 0 and 50):</label>
+                    <input type="range" id="vol" name="vol" min="0" max="50"></li>
+                  <li> tel <label for="phone">Enter your phone number:</label>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></li>
+                  <li>URL <label for="homepage">Add your homepage:</label>
+                    <input type="url" id="homepage" name="homepage"></li>
+                </ul>
+                <a href="hero.html">More Forms Samples</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span class="vocab">
+              <h1>Object Oriented Programming—</h1>
+            </span>
+            <ul>
+              <li> <span class="vocab">Polymorphism—</span> Like a juicer turns 'on' and also plugs in, just like other
+                appliances... OOP means various objects can share methods, but still has ability to override a shared
+                method with a more specific implementation.
+
+              </li>
+              <li><span class="vocab">Inheritance—</span> Similar to an upgraded juicer... is inhereits trades, but does
+                additonal specific things. Takes features of one object and add new properties and methods to improve
+                it's functionality.</li>
+              <li><span class="vocab">Classes—</span>Javascript couldn't use classes before ES6! </li>
+              <li><span class="vocab">Constructor Functions—</span>is an alternative when creating objects
+                <pre>
+const Dice = function(sides=6){
+  this.sides = sides;
+  this.roll = function() {
+    return Math.floor(this.sides * Math.random() + 1)
+}
+}</pre>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span class="vocab">Property Descriptors—
+
+            </span>
+          <li><span class="vocab">Object.getOwnPropertyDescriptor()</span>
+            <pre>
+Object.getOwnPropertyDescriptor(me,'name');
+<< { value: 'DAZ',
+writable: true,
+enumerable: true,
+configurable: true }
+            </pre>
+          </li>
+          <li><span class="vocab">Object.defineProperty()</span>
+            <pre>
+Object.defineProperty(me, 'eyeColor', { value: 'blue', writable: false, enumerable: true }); 
+<< { name: 'DAZ', age: 21, eyeColor: 'blue' }
+            </pre>
+          </li>
+          <li><span class="vocab">get() OR set()</span> Objects CANNOT have both, only one or the other.</li>
+          <li>
+
+          </li>
+          </li>
+          <li>
+            <span class="vocab">
+              <h1>Modern Javascript—</h1> Libraries, MVC frameworks ~Separate code into a modular architecture and
+              prepare it for deployment.
+            </span>
+          <li>Libraries—
+            <ul>
+              <li>DOM Manipulation— by using jQuery to reduce code lines</li>
+              <li>JQuery— JavaScript Library—Solutions for selecting nodes, animation effects, Ajax and events.
+                <ul>
+                  <li>$Dollar Symbol is alias for jQuery methods</li>
+                  <li>_Underscore
+                    <pre>
+// return the last element in an array
+_.last([1, 2, 3]);
+<< 3</pre>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li>
+            Advantages/Disadvantages of Libraries—
+            <ul>
+              <li><span class="vocab">Advantage:</span>
+                <ul>
+                  <li>
+                    used by lots of people and throoughly tested
+                  </li>
+                  <li>High browser functionality
+
+
+                </ul>
+              </li>
+              <li><span class="vocab">Disadvantages:</span>
+                <ul>
+                  <li>
+                    Must include library code, on top of your own code. Potential performance issues.
+                  </li>
+                  <li>May have to change the functionality of the library, which can require some DIGGING through code.
+                  </li>
+                  <li>Could make code slower than using vanilla JavaScript.
+
+                </ul>
+              </li>
+              <li><span class="vocab">When to use a library—</span> You have to learn the library's notation, which can be difficult! Will likely already be cached if you use a CDN. Popularity swings could shift quickly "here today, gone tomorrow". Some libraries just have too much stuff, and much is not very commonly useful. </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <section>
+      <h2>Summary</h2>
+      <p>WOAH! This was like a "BUCKLE UP!!" type of week!! So much stuff covered, hopefully my brain will remember it for the next Team Activity. My favorite part this week was Forms. I think likely because it's something that I'm briefly familiar with, so I get to really take a big bite of it and digest it. -It's a little like comfort food. Meanwhile, Modern Javascript and OOP are a feeling a bit like kimchi or something... must be an accquired taste. </p>
+      <p>I'm having a hard time translating some of the examples into others, for instance, working this week on the Temperature script, it mostly makes sense how the input value is assigned to Celsius, then it travels inbetween the various methods, and returns back values for Celsius and for fahrenheit. I'm not yet very capable of applying this methodology to..anything beyond some simple numbers.  </p>
+    </section>
+  </div>
+  <footer>&copy;<span id="currentyear"></span> | Ashley Zufelt</footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: [
+          "Permanent Marker",
+          "Shadows Into Light Two",
+          "Montserrat",
+        ],
+      },
+    });
+  </script>
+</body>
+
 </html>
