--- a/week5/index.html
+++ b/week5/index.html
@@ -166,7 +166,7 @@ function imaginarySquareRoot(number) {
     </main>
     <section>
       <h2>Summary</h2>
-      <p>I feel quite confident in my browser de-bugging abilities... I spend FAR too long in the debuggin stage. 😂 I haven't used the debugging tools within my script very much, other than logging to console to do checks on things.</p>
+      <p>I feel quite confident in my browser de-bugging abilities... I spend FAR too long in the debugging stage. 😂 I haven't used the debugging tools within my script very much, other than logging to console to do checks on things.</p>
       <p>MY summary or "learn" is that we have so many tools to use, and using them is all part of the development process. It's <span class="vocab">OKAY</span> to think about how the program needs to be written, write and test small pieces at a time, then when it's all working, REFACTOR it. It doesn't have to be the fastest, cleanest, more precise before or while I write it, get it working, error free, then look for ways to improve upon what has been written.</p>
       <p>Also, look for ways to break the code into pieces or snippets so the program doesn't have to rely on a BIG block of code to run. That way if there are errors somewhere, it can be more easily identified. </p>
     </section>
