--- a/week6/todo.html
+++ b/week6/todo.html
@@ -35,6 +35,6 @@
     <div>
       <ul id="todo-list" class="todo-list"></ul>
     </div>
-    <script src="js/todo.js"></script>
+    <script src="js/w6todolist.js"></script>
   </body>
 </html>
