--- a/week5/todolist.html
+++ b/week5/todolist.html
@@ -35,6 +35,6 @@
     <div>
       <ul id="todo-list" class="todo-list"></ul>
     </div>
-    <script src="js/todolist.js"></script>
+    <script src="js/ToDos.js"></script>
   </body>
 </html>
