--- a/week6/todo.html
+++ b/week6/todo.html
@@ -20,25 +20,24 @@
 
   <body>
     <h1>To Do List</h1>
-    <form class="todo-form"></form>
-    <div class="input">
-      <label for="listItem">Add Item:</label>
-      <input type="text" name="listItem" id="listItem" />
-    </form>
-      <div class="buttons">
-        <button class="addButton" type="click"> Add to List!</button>
-        <button type="click" id="all">All Tasks</button>
-        <button type="click" id="active">Active</button>
-        <button type="click" id="complete">Completed</button>
+    <div>
+      <form class="todo-form"></form>
+      <div class="input">
+        <label for="listItem">Add Item:</label>
+        <input type="text" name="listItem" id="listItem" />
+            <button class="addButton" type="click"> Add to List!</button>
+        </form>
+        <div class="filterBtns">
+          <button type="click" id="all">All Tasks</button>
+          <button type="click" id="active">Active</button>
+          <button type="click" id="complete">Completed</button>
+        </div>
+      </div>
+      <div class="outputfield">
+        <ul id="output"></ul>
       </div>
     </div>
-
-    <div class="outputfield">
-      <ul id="output"></ul>
     </div>
-
-    </div>
-
     <script src="js/w6todolist.js"></script>
   </body>
 
