--- a/week9/index.html
+++ b/week9/index.html
@@ -41,6 +41,9 @@
           <ul class="activitylinks">
             <li>
               <a href="javascript30-drums/index-START.html">Music Drums</a>
+              <a href="/week9/final-project-proposal/index2.html"
+                >Final Project Proposal</a
+              >
             </li>
           </ul>
 
